Looks great on desktop, need to fix icons on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,7 @@ body {
 .fade-in {
   opacity: 0; /* Ensure elements are initially hidden */
   animation-fill-mode: forwards; /* Keep the final state after the animation completes */
+  will-change: opacity; /* Optimize for opacity change */
 }
 
 .fade-in-1 {
@@ -95,11 +96,11 @@ body {
 }
 
 .fade-in-2 {
-  animation: fadeIn 0.25s ease-out 0.25s forwards; /* 1s delay for the second item */
+  animation: fadeIn 0.25s ease-out 0.25s forwards; /* 0.25s delay for the second item */
 }
 
 .fade-in-3 {
-  animation: fadeIn 0.25s ease-out 0.5s forwards; /* 2s delay for the third item */
+  animation: fadeIn 0.25s ease-out 0.5s forwards; /* 0.5s delay for the third item */
 }
 
 ::-webkit-scrollbar {
